# gtestmock-cmake-template

./: .gitignore  CMakeLists.txt  README.md  setup.sh
lib/: .gitignore  README.md
src/: Main.cpp
test/: Main.cpp
tests/: EmptyTests.cpp  ExampleTest.cpp
